--- a/src/frontend/styles/components/AppliedFilters.styl
+++ b/src/frontend/styles/components/AppliedFilters.styl
@@ -16,6 +16,7 @@
         padding: .25rem .75rem
         margin-left: 1rem
         text-transform: capitalize
+        border-radius: border-radius
 
     &__label
         margin-right: .5rem
