--- a/src/frontend/styles/components/NameFilter.styl
+++ b/src/frontend/styles/components/NameFilter.styl
@@ -13,6 +13,7 @@
         background-color: featured-color
         width: 50px
         cursor: pointer
+        border-radius: border-radius 0 0 border-radius;
 
     input 
         width: 100%
