--- a/src/frontend/styles/components/Filters.styl
+++ b/src/frontend/styles/components/Filters.styl
@@ -28,8 +28,19 @@
         background-color: primary-color
         border: 0
         text-transform: uppercase
+        border-radius: border-radius
+    
+    select
+        margin: 0
+        box-sizing: border-box
+        -webkit-appearance: none
+        -moz-appearance: none
 
     &__selectStatus
+        background-image: linear-gradient(45deg, transparent 50%, primary-color 50%), linear-gradient(135deg, primary-color 50%, transparent 50%), linear-gradient(to right, featured-color, featured-color)
+        background-position: calc(100% - 20px) 20px,calc(100% - 15px) 20px, 100% 0
+        background-size: 5px 5px, 5px 5px, 2.5rem 100%
+        background-repeat: no-repeat
         width: 100%
 
         @media (min-width: 768px) 
