--- a/src/frontend/styles/components/OrderBy.styl
+++ b/src/frontend/styles/components/OrderBy.styl
@@ -11,3 +11,7 @@
         width: 125px
         font-size: .75rem
         font-weight: 500
+        background-image: linear-gradient(45deg, transparent 50%, featured-color 50%), linear-gradient(135deg, featured-color 50%, transparent 50%)
+        background-position: calc(100% - 20px) 13px,calc(100% - 15px) 13px, 100% 0
+        background-size: 5px 5px, 5px 5px, 2.5rem 100%
+        background-repeat: no-repeat
