Responsive styles fixes

--- a/src/frontend/styles/components/Characters.styl
+++ b/src/frontend/styles/components/Characters.styl
@@ -63,8 +63,11 @@
             height: auto
             position: relative
             overflow: hidden
-            padding-bottom: 45%
+            padding-bottom: 75%
             border-radius: 10px 10px 0 0
+
+            @media (min-width: 500px)
+                padding-bottom: 45%
 
             @media (min-width: 768px)
                 width: 45%
