--- a/src/frontend/styles/components/AppliedFilters.styl
+++ b/src/frontend/styles/components/AppliedFilters.styl
@@ -4,6 +4,9 @@
     align-items: baseline
 
     @media (min-width: 768px) 
+        width: 60%
+
+    @media (min-width: 1100px) 
         width: 75%
 
     &__title
