--- a/src/frontend/styles/components/Filters.styl
+++ b/src/frontend/styles/components/Filters.styl
@@ -44,5 +44,8 @@
         width: 100%
 
         @media (min-width: 768px) 
+            width: 49%
+
+        @media (min-width: 1100px) 
             width: 25%
             
