--- a/src/frontend/styles/components/NameFilter.styl
+++ b/src/frontend/styles/components/NameFilter.styl
@@ -4,6 +4,9 @@
     height: 100%
 
     @media (min-width: 768px) 
+        width: 49%
+
+    @media (min-width: 1100px) 
         width: 45%
 
     .NameFilter__label
